--- a/libaction/src/main/AndroidManifest.xml
+++ b/libaction/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
 
-    <!--ava?--> <application
+    <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
